# weather

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  limiter.py  main.py  models.py
app/db/: crud.py  database.py  models.py
app/services/: cache_service.py  http_client.py  weather_service.py
tests/: conftest.py  test_cache.py  test_forecast.py  test_weather.py
